Closed Bug 701061 Opened 14 years ago Closed 14 years ago

nsISupportsUtils.h(94) : error C2027: use of undefined type 'nsIContent' when building widget\src\windows\nsWindow.cpp

Categories

(Core :: Widget: Win32, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: mayhemer, Assigned: mayhemer)

References

Details

Attachments

(1 file)

Current mozilla-central. $ pymake -C _obj-browser-debug/widget/src/windows/ make.py[0]: Entering directory 'C:\Mozilla\src\mozilla-central\_obj-browser-debug/widget/src/windows/' make.py[1]: Entering directory 'C:\Mozilla\src\mozilla-central\_obj-browser-debug\widget\src\windows' make.py[2]: Entering directory 'C:\Mozilla\src\mozilla-central\_obj-browser-debug\widget\src\windows\tests' make.py[2]: Leaving directory 'C:\Mozilla\src\mozilla-central\_obj-browser-debug\widget\src\windows\tests' C:\Mozilla\src\mozilla-central\config\rules.mk:1371:0$ c:/Mozilla/src/mozilla-central/_obj-browser-debug/config/nsinstall.exe -m 644 C:/Mozilla/src/mozilla -central/widget/src/windows/nsdefs.h C:/Mozilla/src/mozilla-central/widget/src/windows/WindowHook.h ../../../dist/include evaluation from C:\Mozilla\src\mozilla-central\config\rules.mk:1382:42:3:0$ c:/Mozilla/src/mozilla-central/_obj-browser-debug/config/nsinstall.exe -m 644 C :/Mozilla/src/mozilla-central/widget/src/windows/AudioSession.h ../../../dist/include/mozilla/widget make.py[1]: Leaving directory 'C:\Mozilla\src\mozilla-central\_obj-browser-debug\widget\src\windows' make.py[1]: Entering directory 'C:\Mozilla\src\mozilla-central\_obj-browser-debug\widget\src\windows' nsWindow.cpp C:\Mozilla\src\mozilla-central\config\rules.mk:1209:0$ c:/Mozilla/mozilla-build/python/python2.6.exe -O c:/Mozilla/src/mozilla-central/build/cl.py cl -Fons Window.obj -c -D_HAS_EXCEPTIONS=0 -I../../../dist/stl_wrappers -D_IMPL_NS_WIDGET -DMOZ_UNICODE -DMOZ_ENABLE_D3D9_LAYER -DMOZ_ENABLE_D3D10_LAYER -DMOZILLA _INTERNAL_API -D_IMPL_NS_COM -DEXPORT_XPT_API -DEXPORT_XPTC_API -D_IMPL_NS_GFX -D_IMPL_NS_WIDGET -DIMPL_XREAPI -DIMPL_NS_NET -DIMPL_THEBES -DOSTYPE=\"WINN T6.1\" -DOSARCH=WINNT -DEXCLUDE_SKIA_DEPENDENCIES -DUNICODE -D_UNICODE -DNOMINMAX -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -D_SECURE_ATL -DCHROMIU M_BUILD -DU_STATIC_IMPLEMENTATION -DOS_WIN=1 -DWIN32 -D_WIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DCOMPILER_MSVC -I. -IC:/Mozilla/src/mozilla-central/widget /src/windows/../xpwidgets -IC:/Mozilla/src/mozilla-central/widget/src/windows -IC:/Mozilla/src/mozilla-central/layout/generic -IC:/Mozilla/src/mozilla-cent ral/layout/xul/base/src -IC:/Mozilla/src/mozilla-central/toolkit/xre -IC:/Mozilla/src/mozilla-central/xpcom/base -IC:/Mozilla/src/mozilla-central/ipc/chro mium/src -IC:/Mozilla/src/mozilla-central/ipc/glue -I../../../ipc/ipdl/_ipdlheaders -IC:/Mozilla/src/mozilla-central/widget/src/windows -I. -I../../../dis t/include -I../../../dist/include/nsprpub -Ic:/Mozilla/src/mozilla-central/_obj-browser-debug/dist/include/nspr -Ic:/Mozilla/src/mozilla-central/_obj-brow ser-debug/dist/include/nss -TP -nologo -W3 -Gy -Fdgenerated.pdb -wd4800 -we4553 -DDEBUG -D_DEBUG -DTRACING -Zi -Oy- -Ic:/Mozilla/src/mozilla-centra l/_obj-browser-debug/dist/include/cairo -MDd -FI ../../../dist/include/mozilla-config.h -DMOZILLA_CLIENT C:/Mozilla/src/mozilla-central/widget/sr c/windows/nsWindow.cpp nsWindow.cpp C:\Program Files (x86)\Microsoft Visual Studio 9.0\VC\INCLUDE\typeinfo(139) : warning C4275: non dll-interface class 'stdext::exception' used as base for d ll-interface class 'std::bad_cast' C:\Program Files (x86)\Microsoft Visual Studio 9.0\VC\INCLUDE\exception(241) : see declaration of 'stdext::exception' C:\Program Files (x86)\Microsoft Visual Studio 9.0\VC\INCLUDE\typeinfo(138) : see declaration of 'std::bad_cast' C:\Program Files (x86)\Microsoft Visual Studio 9.0\VC\INCLUDE\typeinfo(160) : warning C4275: non dll-interface class 'stdext::exception' used as base for d ll-interface class 'std::bad_typeid' C:\Program Files (x86)\Microsoft Visual Studio 9.0\VC\INCLUDE\exception(241) : see declaration of 'stdext::exception' C:\Program Files (x86)\Microsoft Visual Studio 9.0\VC\INCLUDE\typeinfo(159) : see declaration of 'std::bad_typeid' c:\mozilla\src\mozilla-central\_obj-browser-debug\dist\include\nsAutoPtr.h(104) : warning C4150: deletion of pointer to incomplete type 'mozilla::layers::N v3DVUtils'; no destructor called c:\mozilla\src\mozilla-central\_obj-browser-debug\dist\include\DeviceManagerD3D9.h(52) : see declaration of 'mozilla::layers::Nv3DVUtils' c:\mozilla\src\mozilla-central\_obj-browser-debug\dist\include\nsAutoPtr.h(103) : while compiling class template member function 'nsAutoPtr<T>::~ns AutoPtr(void)' with [ T=mozilla::layers::Nv3DVUtils ] c:\mozilla\src\mozilla-central\_obj-browser-debug\dist\include\DeviceManagerD3D9.h(252) : see reference to class template instantiation 'nsAutoPtr< T>' being compiled with [ T=mozilla::layers::Nv3DVUtils ] c:\mozilla\src\mozilla-central\_obj-browser-debug\dist\include\nsAutoPtr.h(71) : warning C4150: deletion of pointer to incomplete type 'mozilla::layers::Nv 3DVUtils'; no destructor called c:\mozilla\src\mozilla-central\_obj-browser-debug\dist\include\DeviceManagerD3D9.h(52) : see declaration of 'mozilla::layers::Nv3DVUtils' c:\mozilla\src\mozilla-central\_obj-browser-debug\dist\include\nsAutoPtr.h(68) : while compiling class template member function 'void nsAutoPtr<T>: :assign(T *)' with [ T=mozilla::layers::Nv3DVUtils ] c:\mozilla\src\mozilla-central\_obj-browser-debug\dist\include\nsISupportsUtils.h(94) : error C2027: use of undefined type 'nsIContent' C:\Mozilla\src\mozilla-central\_obj-browser-debug\dist\include\nsITheme.h(57) : see declaration of 'nsIContent' C:/Mozilla/src/mozilla-central/widget/src/windows/nsWindow.cpp(8781) : see reference to function template instantiation 'void ns_if_addref<nsIConte nt*>(T)' being compiled with [ T=nsIContent * ] c:\mozilla\src\mozilla-central\_obj-browser-debug\dist\include\nsISupportsUtils.h(94) : error C2227: left of '->AddRef' must point to class/struct/union/ge neric type C:\Mozilla\src\mozilla-central\config\rules.mk:1209:0: command 'c:/Mozilla/mozilla-build/python/python2.6.exe -O c:/Mozilla/src/mozilla-central/build/cl.py cl -FonsWindow.obj -c -D_HAS_EXCEPTIONS=0 -I../../../dist/stl_wrappers -D_IMPL_NS_WIDGET -DMOZ_UNICODE -DMOZ_ENABLE_D3D9_LAYER -DMOZ_ENABLE_D3D10_LAYER -DMOZILLA_INTERNAL_API -D_IMPL_NS_COM -DEXPORT_XPT_API -DEXPORT_XPTC_API -D_IMPL_NS_GFX -D_IMPL_NS_WIDGET -DIMPL_XREAPI -DIMPL_NS_NET -DIMPL_THEBES -DOSTY PE=\"WINNT6.1\" -DOSARCH=WINNT -DEXCLUDE_SKIA_DEPENDENCIES -DUNICODE -D_UNICODE -DNOMINMAX -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -D_SECURE_ATL -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DOS_WIN=1 -DWIN32 -D_WIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DCOMPILER_MSVC -I. -IC:/Mozilla/src/mozilla-centr al/widget/src/windows/../xpwidgets -IC:/Mozilla/src/mozilla-central/widget/src/windows -IC:/Mozilla/src/mozilla-central/layout/generic -IC:/Mozilla/src/moz illa-central/layout/xul/base/src -IC:/Mozilla/src/mozilla-central/toolkit/xre -IC:/Mozilla/src/mozilla-central/xpcom/base -IC:/Mozilla/src/mozilla-central /ipc/chromium/src -IC:/Mozilla/src/mozilla-central/ipc/glue -I../../../ipc/ipdl/_ipdlheaders -IC:/Mozilla/src/mozilla-central/widget/src/windows -I. -I../ ../../dist/include -I../../../dist/include/nsprpub -Ic:/Mozilla/src/mozilla-central/_obj-browser-debug/dist/include/nspr -Ic:/Mozilla/src/mozilla-central/ _obj-browser-debug/dist/include/nss -TP -nologo -W3 -Gy -Fdgenerated.pdb -wd4800 -we4553 -DDEBUG -D_DEBUG -DTRACING -Zi -Oy- -Ic:/Mozilla/src/mozil la-central/_obj-browser-debug/dist/include/cairo -MDd -FI ../../../dist/include/mozilla-config.h -DMOZILLA_CLIENT C:/Mozilla/src/mozilla-central/ widget/src/windows/nsWindow.cpp' failed, return code 2 C:\Mozilla\src\mozilla-central\config\rules.mk:706:0: command 'c:/Mozilla/mozilla-build/python/python.exe c:/mozilla/src/mozilla-central/build/pymake/pymak e/../make.py libs' failed, return code 2 .mozconfig: # Options for client.mk. mk_add_options MOZ_OBJDIR=@TOPSRCDIR@/_obj-browser-debug mk_add_options MOZ_MAKE_FLAGS=-j9 # Options for 'configure' (same as command-line options). #ac_add_options --enable-jemalloc export MOZ_DEBUG_SYMBOLS=1 ac_add_options --enable-application=browser ac_add_options --enable-debug ac_add_options --disable-optimize ac_add_options --enable-shared ac_add_options --disable-static ac_add_options --enable-tests ac_add_options --enable-logging ac_add_options --disable-installer ac_add_options --enable-chrome-format=flat ac_add_options --disable-crashreporter ac_add_options --disable-webm ac_add_options --disable-accessibility ac_add_options --disable-angle
Confirmed with building a fresh tree clone and using just make (single process build).
Looks like bug 696745 is causing this.
Blocks: 696745
Summary: nsISupportsUtils.h(94) : error C2027: use of undefined type 'nsIContent' when building widget\src\windows\nsWindow.cpp with pymake → nsISupportsUtils.h(94) : error C2027: use of undefined type 'nsIContent' when building widget\src\windows\nsWindow.cpp
I don't understand why this is not visible anywhere on tbpl.
Assignee: nobody → honzab.moz
Status: NEW → ASSIGNED
Attachment #573293 - Flags: review?(matspal)
Comment on attachment 573293 [details] [diff] [review] v1 [Checkin comment 5] Yes, Mats mentioned this in the bug but I couldn't see this error.
Attachment #573293 - Flags: review?(matspal) → review+
Attachment #573293 - Attachment description: v1 → v1 [Checkin comment 5]
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: