Bug 701061 - nsISupportsUtils.h(94) : error C2027: use of undefined type 'nsIContent' when building widget\src\windows\nsWindow.cpp, r=enndeakin